--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-expandable-listview": "^1.3.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-popup-menu": "^0.15.11",
     "react-native-safe-area-context": "3.2.0",
